# fullstack-rust

./: .env  .gitignore  .project  Cargo.toml  README.md
client/: Cargo.toml  README.md  index.html  styles.scss
client/src/: main.rs  models.rs  rest_helper.rs
client/src/pages/: about.rs  game.rs  game_state_worker.rs  mod.rs  register.rs
server/: Cargo.toml  connect5.db  connect5.db-shm
server/migrations/2020-06-19-114229_create_db/: down.sql  up.sql
server/src/: api.rs  db.rs  game.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
server/tests/: test_server.rs
