[package]
name = "client"
version = "0.1.0"
authors = ["Vasco <vassil.kolarov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[lib]
#crate-type = ["cdylib", "rlib"]

[dependencies]
# client deps
instant = { version = "0.1", features = ["wasm-bindgen"] }
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8.4", features = ["small_rng"] }
wasm-logger = "0.2"

#yew = { git = "https://github.com/yewstack/yew.git", branch = "master" }
yew = "0.18.0"
yew-macro = "0.18.0"
yew-router = "0.15.0"
yew-router-macro = "0.15.0"

yewtil = "0.4.0"
wasm-bindgen-futures = "0.4.23"
wasm-bindgen = { version = "0.2.76", features = ["serde-serialize"]  }

serde = "1.0.111"
serde_json = "1.0.53"
serde_derive = "1.0.59"
log = "0.4.11"
anyhow = "1.0.40"

[dependencies.web-sys]
version = "0.3"
features = [
    "Headers",
    'HtmlLinkElement',
    'Location',
    'MouseEvent',
    'PopStateEvent',
    "Request",
    "RequestInit",
    "RequestMode",
    "ResponseInit",
    "Response",
    "Window",]