[package]
name = "connect5-rust"
version = "0.1.0"
authors = ["Vasco <vassil.kolarov@gmail.com>"]
edition = "2018"
include = ["src/**/*", "static/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_json = "1.0.64"
actix = "0.11.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"
actix-files = "0.5.0"
actix-session = "0.4.1"
bytes = "1.0.1"
itertools = "0.10.0"
diesel = { version = "1.4.6", features = ["sqlite", "uuidv07", "r2d2"] }
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
log = "0.4.11"

[dev-dependencies]
mocktopus = "0.7.0"